@@ -2,6 +2,7 @@ CHANGELOG
 
 UNRELEASED
   * FEATURE : (breaking) Move callback style to a event based API
+  * FEATURE : isDisjunctiveRefined to check if a disjunctive facet is refined
   * REFACTORING : constructor, now expose the defaults
   * TESTS : defaults test
 
